# ribboncurls

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  THIRD_PARTY_LICENSES.md  about.toml  build.rs  deny.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  cli-release.yml  lint.yml  msrv.yml  pr.yml  publish-crate.yml  setup.yml  tag-release.yml  test.yml
ribboncurls/: CHANGELOG.md  Cargo.toml  README.md  build.rs
ribboncurls-cli/: CHANGELOG.md  Cargo.toml  README.md
ribboncurls-cli/src/: cli.rs  main.rs
ribboncurls-cli/src/operations/: build.rs  render.rs
ribboncurls-cli/tests/: operation_render.rs
ribboncurls-cli/tests/fixtures/: data-lastname.yaml  data-name.yaml  variables.mustache
ribboncurls/src/: lib.rs  main.rs  new_lib.rs  syntax_tree.rs  token.rs  utils.rs
ribboncurls/src/syntax_tree/: utils.rs
ribboncurls/tests/: from_specs.rs  general.rs
scripts/: package_build
src/: lib.rs
tests/: from_specs.rs
