[package]
name = "vstrs-mustache"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-escape = "0.2.13"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
thiserror = "1.0.57"

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
