[package]
name = "ribboncurls-cli"
version = "0.3.0"
edition = "2021"
authors = ["Tinted Theming <tintedtheming@proton.me>"]
license = "MPL-2.0"
description = "Simple rendering of mustache templates"
keywords = ["mustache", "template"]
categories = ["template-engine"]
homepage = "https://github.com/tinted-theming/ribboncurls"
repository = "https://github.com/tinted-theming/ribboncurls"
documentation = "https://docs.rs/ribboncurls-cli"
readme = "README.md"

[dependencies]
anyhow = "1.0.81"
clap = "4.5.2"
serde_yaml = "0.9.33"

[dependencies.ribboncurls]
path = "../ribboncurls"
version = "0.3.0"

[[bin]]
name = "ribboncurls"
path = "src/main.rs"
