[package]
name = "ribboncurls-cli"
version = "0.4.1"
edition = "2021"
authors = ["Tinted Theming <tintedtheming@proton.me>"]
license = "MPL-2.0"
description = "Simple rendering of mustache templates"
keywords = ["mustache", "template"]
categories = ["template-engine"]
homepage = "https://github.com/tinted-theming/ribboncurls"
repository = "https://github.com/tinted-theming/ribboncurls"
documentation = "https://docs.rs/ribboncurls-cli"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.51"
serde_yaml = "0.9.34"

[dependencies.ribboncurls]
path = "../ribboncurls"
version = "0.4.1"

[[bin]]
name = "ribboncurls"
path = "src/main.rs"

[lints.clippy]
pedantic      = { level = "deny", priority = -1 }
nursery       = { level = "deny", priority = -1 }
unwrap_used   = "deny"
