[package]
name = "ribboncurls"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Erik Vesteraas <erik@vestera.as>", "Jamy Golden <code@jamygolden.com>"]
license = "MIT OR Apache-2.0"
description = "Simple rendering of mustache templates"
keywords = ["mustache", "template"]
categories = ["template-engine"]
homepage = "https://github.com/evestera/ribboncurls"
repository = "https://github.com/evestera/ribboncurls"
documentation = "https://docs.rs/ribboncurls"
readme = "README.md"

[dependencies]
html-escape = "0.2.13"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
thiserror = "1.0.57"

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
