[package]
name = "ribboncurls"
version = "0.2.0"
edition = "2021"
build = "build.rs"
authors = ["Tinted Theming <tintedtheming@proton.me>"]
license = "MIT OR Apache-2.0"
description = "Simple rendering of mustache templates"
keywords = ["mustache", "template"]
categories = ["template-engine"]
homepage = "https://github.com/tinted-theming/ribboncurls"
repository = "https://github.com/tinted-theming/ribboncurls"
documentation = "https://docs.rs/ribboncurls"
readme = "README.md"
rust-version = "1.65.0"

[dependencies]
html-escape = "0.2.13"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
thiserror = "1.0.57"

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
