[package]
name = "ribboncurls"
version = "0.5.0"
edition = "2021"
build = "build.rs"
authors = ["Tinted Theming <tintedtheming@proton.me>"]
license = "MPL-2.0"
description = "Simple rendering of mustache templates"
keywords = ["mustache", "template"]
categories = ["template-engine"]
homepage = "https://github.com/tinted-theming/ribboncurls"
repository = "https://github.com/tinted-theming/ribboncurls"
documentation = "https://docs.rs/ribboncurls"
readme = "README.md"
rust-version = "1.68.0"

[dependencies]
html-escape = "0.2.13"
regex = "1.12.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
thiserror = "2.0.17"

[build-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"

[lints.clippy]
pedantic      = { level = "deny", priority = -1 }
nursery       = { level = "deny", priority = -1 }
unwrap_used   = "deny"
